feat: device login alerts via email
